Changes to implement protobuf

--- a/code/active-record/Gemfile
+++ b/code/active-record/Gemfile
@@ -44,3 +44,5 @@ end
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
 gem 'active_remote'
+gem 'protobuf-nats'
+gem 'protobuf-activerecord'
