--- a/code/Dockerfile
+++ b/code/Dockerfile
@@ -1,6 +1,6 @@
 FROM ruby:2.6.5
 
-RUN apt-get update && apt-get install -qq -y --no-install-recommends build-essential
+RUN apt-get update && apt-get install -qq -y --no-install-recommends build-essential nodejs
 
 ENV INSTALL_PATH /usr/src/service
 ENV HOME=$INSTALL_PATH PATH=$INSTALL_PATH/bin:$PATH
