--- a/code/active-record/config/cable.yml
+++ b/code/active-record/config/cable.yml
@@ -7,4 +7,4 @@ test:
 production:
   adapter: redis
   url: redis://localhost:6379/1
-  channel_prefix: service_production
+  channel_prefix: active-record_production
