--- a/code/active-record/test/fixtures/employees.yml
+++ b/code/active-record/test/fixtures/employees.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  guid: MyString
   first_name: MyString
   last_name: MyString
 
 two:
+  guid: MyString
   first_name: MyString
   last_name: MyString
